adding new testcases for alert and iframe

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\junoj\AppData\Local\Temp\testng-eclipse-601769115\testng-customsuite.xml</span>
+                    <span>C:\Users\junoj\AppData\Local\Temp\testng-eclipse--574671440\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="SeleniumBasicCommands.SeleniumCommands" class="method navigator-link" hash-for-method="TC_016_verifyIsDisplayed">TC_016_verifyIsDisplayed</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="SeleniumBasicCommands.SeleniumCommands" class="method navigator-link" hash-for-method="TC_25_verifyTextInAFrame">TC_25_verifyTextInAFrame</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC_016_verifyIsDisplayed">
-                  </a> <!-- TC_016_verifyIsDisplayed -->
-                  <span class="method-name">TC_016_verifyIsDisplayed</span>
+                  <a name="TC_25_verifyTextInAFrame">
+                  </a> <!-- TC_25_verifyTextInAFrame -->
+                  <span class="method-name">TC_25_verifyTextInAFrame</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\junoj\AppData\Local\Temp\testng-eclipse-601769115\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\junoj\AppData\Local\Temp\testng-eclipse--574671440\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;SeleniumBasicCommands.SeleniumCommands&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC_016_verifyIsDisplayed&quot;/&gt;
+          &lt;include name=&quot;TC_25_verifyTextInAFrame&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- SeleniumBasicCommands.SeleniumCommands --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC_016_verifyIsDisplayed')
+data.setCell(0, 1, 'TC_25_verifyTextInAFrame')
 data.setCell(0, 2, 'SeleniumBasicCommands.SeleniumCommands')
-data.setCell(0, 3, 2601);
+data.setCell(0, 3, 9040);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,47 +213,59 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">18 ignored methods</span>
+            <span class="header-content">24 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">SeleniumBasicCommands.SeleniumCommands</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">TC_007_verifyEmptyStateZipCode</span>
-                <br/>
-                <span class="ignored-method-name">Tc_008_verifySuccessfulFormSubmission</span>
-                <br/>
-                <span class="ignored-method-name">TC_003_verifyTwoInputFieldMessage</span>
-                <br/>
-                <span class="ignored-method-name">TC_015_verifyWebElementsCommands</span>
-                <br/>
-                <span class="ignored-method-name">TC_009_verifyNewLetterSubscriptionUsingCSSSelector</span>
-                <br/>
-                <span class="ignored-method-name">TC_010_verifyQuitAndClose</span>
-                <br/>
                 <span class="ignored-method-name">TC_017_verifyIsSelected</span>
-                <br/>
-                <span class="ignored-method-name">TC_018_verifyIsEnabled</span>
-                <br/>
-                <span class="ignored-method-name">TC_012_verifyNavigateTo</span>
                 <br/>
                 <span class="ignored-method-name">TC_002_verifySingleInputFieldMessage</span>
                 <br/>
+                <span class="ignored-method-name">TC_019_verifyTheMessageDisplayedInNewTab</span>
+                <br/>
+                <span class="ignored-method-name">TC_018_verifyIsEnabled</span>
+                <br/>
                 <span class="ignored-method-name">TC_013_verifyRefresh</span>
                 <br/>
-                <span class="ignored-method-name">TC_005_verifyNewToursRegistration</span>
-                <br/>
-                <span class="ignored-method-name">TC_011_verifyInstantDemoRequestForm</span>
-                <br/>
-                <span class="ignored-method-name">TC_004_verifyLocators</span>
-                <br/>
                 <span class="ignored-method-name">TC_004_verifyDemoShopLoginPage</span>
+                <br/>
+                <span class="ignored-method-name">TC_012_verifyNavigateTo</span>
+                <br/>
+                <span class="ignored-method-name">TC_24_verifyPromptAlert</span>
+                <br/>
+                <span class="ignored-method-name">TC_023_verifyConfirmAlert</span>
                 <br/>
                 <span class="ignored-method-name">TC_006_verifyEmptyFieldValidation</span>
                 <br/>
                 <span class="ignored-method-name">TC_014_verifyForwardAndBackwordnavigation</span>
                 <br/>
                 <span class="ignored-method-name">TC_001_verifyObsquraTitle</span>
+                <br/>
+                <span class="ignored-method-name">TC_004_verifyLocators</span>
+                <br/>
+                <span class="ignored-method-name">TC_016_verifyIsDisplayed</span>
+                <br/>
+                <span class="ignored-method-name">TC_007_verifyEmptyStateZipCode</span>
+                <br/>
+                <span class="ignored-method-name">TC_020_verifyTheMessageDisplayedInNewWindow</span>
+                <br/>
+                <span class="ignored-method-name">Tc_008_verifySuccessfulFormSubmission</span>
+                <br/>
+                <span class="ignored-method-name">TC_015_verifyWebElementsCommands</span>
+                <br/>
+                <span class="ignored-method-name">TC_005_verifyNewToursRegistration</span>
+                <br/>
+                <span class="ignored-method-name">TC_011_verifyInstantDemoRequestForm</span>
+                <br/>
+                <span class="ignored-method-name">TC_009_verifyNewLetterSubscriptionUsingCSSSelector</span>
+                <br/>
+                <span class="ignored-method-name">TC_21_verifySimpleAlert</span>
+                <br/>
+                <span class="ignored-method-name">TC_003_verifyTwoInputFieldMessage</span>
+                <br/>
+                <span class="ignored-method-name">TC_010_verifyQuitAndClose</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -271,12 +283,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TC_016_verifyIsDisplayed</span>
-                <span class="method-start">2493 ms</span>
+                <span class="method-name">TC_25_verifyTextInAFrame</span>
+                <span class="method-start">3252 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">5098 ms</span>
+                <span class="method-start">12296 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
