--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,20 +1,26 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_007_verifyEmptyStateZipCode</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.Tc_008_verifySuccessfulFormSubmission</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_003_verifyTwoInputFieldMessage</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_015_verifyWebElementsCommands</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_009_verifyNewLetterSubscriptionUsingCSSSelector</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_010_verifyQuitAndClose</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_017_verifyIsSelected</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_018_verifyIsEnabled</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_012_verifyNavigateTo</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_002_verifySingleInputFieldMessage</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_019_verifyTheMessageDisplayedInNewTab</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_018_verifyIsEnabled</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_013_verifyRefresh</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_005_verifyNewToursRegistration</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_011_verifyInstantDemoRequestForm</td></tr>
-<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_004_verifyLocators</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_004_verifyDemoShopLoginPage</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_012_verifyNavigateTo</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_24_verifyPromptAlert</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_023_verifyConfirmAlert</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_006_verifyEmptyFieldValidation</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_014_verifyForwardAndBackwordnavigation</td></tr>
 <tr><td>SeleniumBasicCommands.SeleniumCommands.TC_001_verifyObsquraTitle</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_004_verifyLocators</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_016_verifyIsDisplayed</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_007_verifyEmptyStateZipCode</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_020_verifyTheMessageDisplayedInNewWindow</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.Tc_008_verifySuccessfulFormSubmission</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_015_verifyWebElementsCommands</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_005_verifyNewToursRegistration</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_011_verifyInstantDemoRequestForm</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_009_verifyNewLetterSubscriptionUsingCSSSelector</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_21_verifySimpleAlert</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_003_verifyTwoInputFieldMessage</td></tr>
+<tr><td>SeleniumBasicCommands.SeleniumCommands.TC_010_verifyQuitAndClose</td></tr>
 </table>
